--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Contacts</string>
+    <string name="add">Add</string>
+    <string name="search">Search</string>
+
+    <string name="hint_first_name">First name</string>
+    <string name="hint_second_name">Second name</string>
+    <string name="hint_phone">Phone</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Contact not saved because it is empty.</string>
+
+    <string name="ringtone_text_view">Ringtone</string>
+    <string name="ringtone_name_text_view">Old Phone</string>
+
+    <string name="note_text_view">Note</string>
+    <string name="note_name_text_view">---</string>
+
+    <string name="edit">Edit</string>
 </resources>
