--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="accept">Accept</string>
 
     <string name="text_here">Text here</string>
+    <string name="take_a_photo">Take a photo</string>
+    <string name="choose_photo">Choose photo</string>
+    <string name="delete">Delete contact</string>
+    <string name="phone_is_empty">Phone field should not be empty!</string>
 </resources>
